[PN-12307] Fix B2bAddressController import
